# magnon

./: Cargo.toml  README.md  skx.csv
docs/: calibration.md  equations.md  llb_validation.md  physics.md  plan-multilayer.md  plan-photonic.md  plan.md  references.md  session-closing-assessment.md  usage.md  viability-report.md  zhou_fgt_calibration.md
docs/llb_validation/: baseline_probe_mz.csv  baseline_stderr.txt
examples/: test_beaurepaire_ni.rs  test_llb_ni_demag.rs  test_llb_reduces_to_llg.rs  test_llb_two_stage.rs  test_m2_coupling.rs  test_m3tm_gpu_vs_host.rs  test_nz2.rs  test_optical_skin_depth.rs  test_pump_probe.rs  test_sp4_proxy.rs  test_zhou_fgt.rs  test_zhou_fgt_calibrate.rs
src/: config.rs  effective.rs  gpu.rs  lib.rs  main.rs  material.rs  material_thermal.rs  metrics.rs  photonic.rs  substrate.rs  thermal.rs
src/shaders/: llg.wgsl
